# Metrobud

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  Makefile  Metrobud.make  README.md  build.sh  premake5.lua
AuraEngine/: CMakeLists.txt
AuraEngine/src/: AuraEngine.hpp
AuraEngine/src/AuraEngine/: ExportAPI.hpp
AuraEngine/src/AuraEngine/Client/: Client.cpp  Client.hpp
AuraEngine/src/AuraEngine/Debug/: Debug.cpp  Debug.hpp
AuraEngine/src/AuraEngine/EventHandler/: EventHandler.cpp  EventHandler.hpp
AuraEngine/src/AuraEngine/Input/: Input.cpp  Input.hpp
AuraEngine/src/AuraEngine/Input/Keyboard/: Keyboard.cpp  Keyboard.hpp  Keycode.hpp
AuraEngine/src/AuraEngine/Log/: Log.cpp  Log.hpp
AuraEngine/src/AuraEngine/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexAttribPointer.cpp  VertexAttribPointer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
AuraEngine/src/AuraEngine/UI/: UI.cpp  UI.hpp
AuraEngine/src/AuraEngine/UI/UIElement/: UIElement.hpp
AuraEngine/src/AuraEngine/UI/UIElement/UIFrame/: UIFrame.cpp  UIFrame.hpp
AuraEngine/src/AuraEngine/UI/UIElement/UIText/: UIText.cpp  UIText.hpp
AuraEngine/src/AuraEngine/Window/: Window.cpp  Window.hpp
Metrobud/: CMakeLists.txt  imgui.ini
Metrobud/src/: Metrobud.cpp  Metrobud.hpp  main.cpp
include/glad/: glad.h
src/: CMakeLists.txt  common.h  common.hpp  main.c  main.cpp
src/AuraEngine/: AE_API.hpp  AuraEngine.cpp  AuraEngine.hpp  AuraMath.hpp  CMakeLists.txt  Math.cpp  Math.hpp
src/AuraEngine/Application/: Application.cpp  Application.hpp
src/AuraEngine/Debug/: Debug.cpp  Debug.hpp
src/AuraEngine/Input/: Input.cpp  Input.hpp
src/AuraEngine/Input/KeyboardInput/: KeyboardInput.cpp  KeyboardInput.hpp
src/AuraEngine/Input/MouseInput/: MouseInput.cpp  MouseInput.hpp
src/AuraEngine/Renderer/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  Renderer.cpp  Renderer.hpp
src/AuraEngine/Renderer/GL/: GLObject.hpp
src/AuraEngine/Renderer/GL/Buffer/: Buffer.cpp  Buffer.hpp
src/AuraEngine/Renderer/GL/Shader/: Shader.cpp  Shader.hpp
src/AuraEngine/Renderer/GL/VertexArray/: VertexArray.cpp  VertexArray.hpp
src/AuraEngine/Renderer/OpenGL/: OpenGL.cpp  OpenGL.hpp  OpenGLObject.hpp
src/AuraEngine/Renderer/OpenGL/Buffer/: Buffer.cpp  Buffer.hpp
src/AuraEngine/Renderer/OpenGL/Shader/: Shader.cpp  Shader.hpp
src/AuraEngine/Renderer/OpenGL/Texture/: Texture.cpp  Texture.hpp
src/AuraEngine/Renderer/OpenGL/VertexArray/: VertexArray.cpp  VertexArray.hpp
src/AuraEngine/Window/: Window.cpp  Window.hpp
src/Client/: Client.cpp  Client.hpp  client.c  client.h
src/Client/Renderer/: Renderer.cpp  Renderer.hpp
src/Client/Window/: Window.cpp  Window.hpp
src/Debug/: Debug.cpp  Debug.hpp
src/Metrobud/: CMakeLists.txt  main.cpp
src/Metrobud/Client/: Client.cpp  Client.hpp
src/Renderer/: renderer.c  renderer.h
src/client/: client.cpp  client.hpp
src/enigne/: engine.hpp
src/glad/: glad.c
src/glwrapper/: glwrapper.hpp
src/glwrapper/buffer/: buffer.cpp  buffer.hpp
src/glwrapper/shader/: shader.cpp  shader.hpp
src/modules/client/: client.c  client.cpp  client.h  client.hpp
src/modules/engine/: engine.c  engine.cpp  engine.h
src/modules/math/: math.hpp  vector.h  vector.hpp
src/modules/renderer/: buffer.c  buffer.h  renderer.c  renderer.cpp  renderer.h  renderer.hpp  shader.c  shader.h  shader_src.h  shader_src.hpp  vertexbuffer.c  vertexbuffer.h
src/modules/renderer/wrapper/: buffer.c  buffer.cpp  buffer.h  buffer.hpp  opengl.c  opengl.cpp  opengl.h  opengl.hpp  shader.c  shader.cpp  shader.h  shader.hpp  vertexarray.c  vertexarray.cpp  vertexarray.h  vertexarray.hpp
src/modules/window/: window.c  window.cpp  window.h  window.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/window/: window.cpp  window.hpp
